# abstracted.reaction

./: .gitattributes  .gitignore  docker-compose.yml
backend/: Makefile  pyproject.toml
backend/server/: __main__.py
backend/test/: database_test.py  server_test.py  test_database.py  test_server.py
backend/transcoder/: __main__.py
backend/util/: __init__.py
backend/util/database/: database.py  schema.sql
backend/util/models/actress/: __init__.py
backend/util/models/actress_detail/: __init__.py
backend/util/models/film/: __init__.py
backend/util/models/rating/: __init__.py
backend/util/models/torrent/: __init__.py
backend/util/models/uuid/: __init__.py
backend/util/torrent_client/: torrent.py
frontend/: bun.lockb  index.html  package.json
frontend/src/: App.jsx  AppRenderer.jsx  index.js
frontend/src/components/: CalendarToolbar.jsx  DatatablePagination.jsx  StateButton.jsx
frontend/src/components/cards/: IconCard.jsx
frontend/src/components/charts/: util.jsx
frontend/src/components/common/: ColorSwitcher.jsx
frontend/src/constants/: defaultValues.jsx  menu.jsx
frontend/src/containers/applications/: AddNewTodoModal.jsx  ChatApplicationMenu.jsx  SurveyApplicationMenu.jsx
frontend/src/containers/dashboards/: Calendar.jsx
frontend/src/containers/navs/: Breadcrumb.jsx  Footer.jsx  Sidebar.jsx  Topnav.DarkSwitch.jsx  Topnav.Notifications.jsx  Topnav.jsx
frontend/src/containers/pages/: ImageListView.jsx  ListPageHeading.jsx  (+1 more)
frontend/src/data/: blog.jsx  cakes.jsx  carouselItems.jsx  charts.jsx  comments.jsx  devActressesData.js  devDiagnosticData.js  devFilmData.js  devImportData.js  diagnostic.js  events.jsx  faq.jsx  follow.jsx  iconCards.jsx  icons.jsx  knowledgebase.jsx  logs.jsx  posts.jsx  prices.jsx  products.jsx  profileStatuses.jsx  questions.jsx  recentposts.jsx  survey.quotas.jsx  tickets.jsx  topRatedItems.jsx
frontend/src/helpers/: Firebase.jsx  ThemeColors.jsx  Utils.jsx  authHelper.jsx
frontend/src/hooks/: use-mousetrap.jsx
frontend/src/lang/: index.jsx
frontend/src/layout/: AppLayout.jsx
frontend/src/providers/: actressesProvider.jsx  diagnosticProvider.jsx  filmProvider.jsx  filmsProvider.jsx  importsProvider.jsx
frontend/src/redux/: actions.jsx  constants.jsx  reducers.jsx  sagas.jsx  store.jsx
frontend/src/views/: error.jsx
(+25 files in other folders)
