[tool.poetry]
name = "abstracted-reaction"
version = "0.1.0"
description = ""
authors = ["Aryan Kothari <personal@aryankothari.dev>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.server.dependencies]
requests = "^2.31.0"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"

[tool.poetry.group.transcoder.dependencies]
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
types-psycopg2 = "^2.9.21.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
exclude = [
    'server/util',
    'transcoder/util'
]
strict = true
