[tool.poetry]
name = "abstracted.reaction"
version = "0.1.0"
description = ""
authors = ["Aryan Kothari <personal@aryankothari.dev>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.server.dependencies]
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
httpx = "^0.25.2"

[tool.poetry.group.transcoder.dependencies]
ffmpeg-python = "^0.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
coverage = "^7.3.2"
mypy = "^1.7.1"
pytest = "^7.4.3"
whatintime = "^1.1.0"
docker-stubs = {git = "https://github.com/rdozier-work/docker-stubs", rev = "9de7906804ae912f1d644c97b617ac77e784fca8"}
pytest-order = "^1.2.0"
isort = "^5.12.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
exclude = [
    'server/util',
    'transcoder/util',
    't.py'
]
strict = true

[tool.coverage.report]
exclude_also = [
    "return NotImplemented",
    "if __name__ == .__main__."
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]